--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
     <script type="module" src="./script.js"></script>
 </head>
+
 <body>
     <div class="board" id="board">
         <div class="tile" data-cell></div>
@@ -21,8 +23,9 @@
         <div class="tile" data-cell></div>
     </div>
     <div id="overlay" class="overlay">
-        <div data-result>X Wins</div>
-        <button id="restart">Start new game</button>
+        <div class="result" data-result></div>
+        <button class="btn" id="restart">Start new game</button>
     </div>
 </body>
+
 </html>
